--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
-    "prettier": "^2.8.4",
+    "prettier": "2.8.8",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
